--- a/Card/index.html
+++ b/Card/index.html
@@ -24,14 +24,16 @@
                <strong class="del">&#x2716;</strong>
                <h3>Card One</h3>
                <img class="card_img" src="./img/1.jpg" alt="Opp">
-               <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo beatae temporibus blanditiis accusantium suscipit eligendi enim asperiores? Doloribus sed, consequuntur recusandae laborum assumenda, consequatur laudantium culpa amet, illo numquam ducimus?</div>
+               <div class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo beatae temporibus blanditiis accusantium suscipit eligendi enim asperiores? Doloribus sed, consequuntur recusandae laborum assumenda, consequatur laudantium culpa amet, illo numquam ducimus?</div>
+               <div class="card_date"></div>
                <img class="like" src="./img/like_black.png" alt="like">
             </div>
             <div class="card">
                <strong class="del">&#x2716;</strong>
                <h3>Card Two</h3>
                <img class="card_img" src="./img/2.jpg" alt="Opp">
-               <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti molestias reiciendis at cumque labore mollitia, natus pariatur distinctio quaerat sed rerum accusantium facilis ipsa molestiae, esse nobis! Hic, ipsum sit!</div>
+               <div class="card_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti molestias reiciendis at cumque labore mollitia, natus pariatur distinctio quaerat sed rerum accusantium facilis ipsa molestiae, esse nobis! Hic, ipsum sit!</div>
+               <div class="card_date"></div>
                <img class="like" src="./img/like_black.png" alt="like">
             </div>
             <div class="card">
@@ -39,27 +41,31 @@
                <h3>Card Three</h3>
                <img class="card_img" src="./img/3.jpg" alt="Opp">
                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo beatae temporibus blanditiis accusantium suscipit eligendi enim asperiores? Doloribus sed, consequuntur recusandae laborum assumenda, consequatur laudantium culpa amet, illo numquam ducimus?</div>
+               <div class="card_date"></div>
                <img class="like" src="./img/like_black.png" alt="like">
             </div>
             <div class="card">
                <strong class="del">&#x2716;</strong>
                <h3>Card Four</h3>
                <img class="card_img" src="./img/4.jpg" alt="Opp">
-               <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quia, corporis enim id saepe accusantium omnis quibusdam qui sunt? Cumque facere nihil distinctio! Architecto autem voluptatibus, dolor molestias recusandae culpa?</div>
+               <div class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quia, corporis enim id saepe accusantium omnis quibusdam qui sunt? Cumque facere nihil distinctio! Architecto autem voluptatibus, dolor molestias recusandae culpa?</div>
+               <div class="card_date"></div>
                <img class="like" src="./img/like_black.png" alt="like">
             </div>
             <div class="card">
                <strong class="del">&#x2716;</strong>
                <h3>Card Five</h3>
                <img class="card_img" src="./img/5.jpg" alt="Opp">
-               <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo beatae temporibus blanditiis accusantium suscipit eligendi enim asperiores? Doloribus sed, consequuntur recusandae laborum assumenda, consequatur laudantium culpa amet, illo numquam ducimus?</div>
+               <div class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo beatae temporibus blanditiis accusantium suscipit eligendi enim asperiores? Doloribus sed, consequuntur recusandae laborum assumenda, consequatur laudantium culpa amet, illo numquam ducimus?</div>
+               <div class="card_date"></div>
                <img class="like" src="./img/like_black.png" alt="like">
             </div>
             <div class="card">
                <strong class="del">&#x2716;</strong>
                <h3>Card Six</h3>
                <img class="card_img" src="./img/6.jpg" alt="Opp">
-               <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo beatae temporibus blanditiis accusantium suscipit eligendi enim asperiores? Doloribus sed, consequuntur recusandae laborum assumenda, consequatur laudantium culpa amet, illo numquam ducimus?</div>
+               <div class="card_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo beatae temporibus blanditiis accusantium suscipit eligendi enim asperiores? Doloribus sed, consequuntur recusandae laborum assumenda, consequatur laudantium culpa amet, illo numquam ducimus?</div>
+               <div class="card_date"></div>
                <img class="like" src="./img/like_black.png" alt="like">
             </div>
          </div>
