--- a/Desing Project/index.html
+++ b/Desing Project/index.html
@@ -629,7 +629,7 @@
       </div>
    </footer>
    <!-- footer -->
-   <script src="./app.js"></script>
+   <script defer src="./app.js"></script>
 </body>
 </html>
 
